--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -1,43 +1,41 @@
+# nginx.conf
 server {
-        listen 80 default_server;
-        listen [::]:80 default_server;
+    listen 80;
+    server_name walentyao.ru;
 
-        root /var/www/dist;
-
-        index index.html index.htm index.nginx-debian.html;
-
-        server_name vite-deploy-test.ru www.vite-deploy-test.ru;
-
-        location / {
-                try_files $uri $uri/ /index.html;
-        }
+    # Redirect all HTTP requests to HTTPS
+    return 301 https://$host$request_uri;
 }
 
 server {
-        root /var/www/dist;
-        index index.html index.htm index.nginx-debian.html;
-        server_name vite-deploy-test.ru; # managed by Certbot
+    listen 443 ssl;
+    server_name walentyao.ru;
 
-        location / {
-                try_files $uri $uri/ /index.html;
-        }
+    # Path to SSL certificate and key
+    ssl_certificate /etc/ssl/certs/walentyao.crt;
+    ssl_certificate_key /etc/ssl/private/walentyao.key;
 
-    listen [::]:443 ssl ipv6only=on; # managed by Certbot
-    listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/vite-deploy-test.ru/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/vite-deploy-test.ru/privkey.pem; # managed by Certbot
-    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+    # SSL settings for security
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
-}
-server {
-    if ($host = vite-deploy-test.ru) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
+    # Root folder with built React app
+    root /usr/share/nginx/html;
+    index index.html;
 
+    # Ensure SPA routes are correctly handled
+    location / {
+        try_files $uri /index.html;
+    }
 
-        listen 80 ;
-        listen [::]:80 ;
-    server_name vite-deploy-test.ru;
-    return 404; # managed by Certbot
+    # Optional: Block access to hidden files and directories
+    location ~ /\. {
+        deny all;
+    }
+
+    # Optional: Gzip compression for better performance
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_min_length 1024;
 }
